<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coffee Table</string>
    <string name="settings_app_name">Settings</string>
    <string name="action_settings">Settings</string>

    <string name="prefs_select_apps">Select apps to show</string>
    <string name="prefs_select_apps_summary">Pick apps to show in the launcher\'s apps grid</string>

    <string name="prefs_about_and_licenses">About…</string>
    <string name="about_app_description">Coffee Table is a simple launcher which aims to supply minimum number of features, be lightweight, customize shown apps and optimize to e-reader (namely, Nook).</string>
    <string name="about_app_open_source_link">This is an open-source project. Read more at https://github.com/menny/coffeetable</string>
    <string name="about_app_open_source_licenses">Using the following open-source libraries:</string>
    <string name="app_license_android_x_title">AndroidX</string>
    <string name="app_license_android_x_license">Copyright 2018 Google Licensed under the Apache License, Version 2.0 (the \'License\'); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \'AS IS\' BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="app_license_chauffeur_title">Chauffeur</string>
    <string name="app_license_chauffeur_license">Copyright 2018 Menny Even-Danan Licensed under the Apache License, Version 2.0 (the \'License\'); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \'AS IS\' BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="filter_out_none_main">No not-main</string>
    <string name="filter_out_not_exported">No not-exported</string>
    <string name="filter_out_disabled">No disabled</string>
</resources>
